src/test/ui/generic-associated-types/trait-objects.stderr
error[E0038]: the trait `StreamingIterator` cannot be made into an object
  --> $DIR/trait-objects.rs:11:16
   |
LL | fn min_size(x: &mut dyn for<'a> StreamingIterator<Item<'a> = &'a i32>) -> usize {
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `StreamingIterator` cannot be made into an object
   |
   = help: consider moving `Item` to another trait
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/trait-objects.rs:5:10
   |
LL | trait StreamingIterator {
   |       ----------------- this trait cannot be made into an object...
LL |     type Item<'a> where Self: 'a;
   |          ^^^^ ...because it contains the generic associated type `Item`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
